--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -16,5 +16,9 @@ environments {
   }
   prod {
     api.prod.endpoint = "https://prod.thedogapi.com/v1/"
+  },
+  apikey {
+    api.xapikey = "8adf71fc-c27b-40ef-8662-19ab891129e3"
   }
 }
+
